[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daiana"
version = "0.1.0"
description = "Tool for LaTeX CV/cover letter automation for job hunting"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Pano Pepino", email = "panizofisico@gmail.com"}
]
keywords = ["cli", "latex", "cv", "cover-letter", "job-hunting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0.0",
]

[project.scripts]
daiana = "daiana.cli:cli"

[project.urls]
Homepage = "https://github.com/PanoPepino/daiana"
Repository = "https://github.com/PanoPepino/daiana"
